# laboratory-work-02-kapavkin

./: ADT.h  CMakeLists.txt  main.cpp
array/: CMakeLists.txt  array.cpp  array.h
array/stack/: CMakeLists.txt  stack.cpp  stack.h
laboratory-work-01-kapavkin/: CMakeLists.txt
laboratory-work-01-kapavkin/adam/: CMakeLists.txt  adam.cpp  adam.h
laboratory-work-01-kapavkin/date/: CMakeLists.txt  date.cpp  date.h
laboratory-work-01-kapavkin/matrix/: CMakeLists.txt  matrix.cpp  matrix.h
laboratory-work-01-kapavkin/number/: CMakeLists.txt  number.cpp  number.h
list/: CMakeLists.txt  list.cpp  list.h
queue/: CMakeLists.txt  queue.cpp  queue.h
report/: report.tex
tree/: CMakeLists.txt  tree.cpp  tree.h
